<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentInicial">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/frag_inicial_title" />

    <Button
        android:id="@+id/btnEncuestaA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encuesta_a" />

    <Button
        android:id="@+id/btnEncuestaB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encuesta_b" />

</LinearLayout>